--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,9 +4,10 @@ body{
     font-family: "Russo One", sans-serif;
   font-weight: 500;
   font-style: normal;
+ 
   }
 
-.container {
+.container {height: 85vh;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
