--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,10 +1,8 @@
-
-
 .nav {
   font-family: "Russo One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  width: 100%;
+  width: 102.3%;
   font-size: 2vw; 
   display: flex;
   justify-content: space-around;
@@ -12,6 +10,8 @@
   height: 5vh;
   background-color: #0000008e;
   transition: background-color 0.3s ease;
+  margin-top: -1.1%;
+  margin-left: -1.2%;
 }
 
 .nav:hover {
