--- a/src/pages/AboutMe/AboutMe.module.scss
+++ b/src/pages/AboutMe/AboutMe.module.scss
@@ -8,7 +8,7 @@ body{
     margin: 0 auto;
     padding: 20px;
     display: flex;
-    flex-direction: column; /* Arrange children in a column */
+    flex-direction: column; 
     align-items: center;
     text-align: center;
     background-color:rgba(50, 189, 40, 0.87);
