--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -11,7 +11,7 @@ body{
     margin: 0 auto;
     padding: 20px;
     display: flex;
-    flex-direction: column; /* Arrange children in a column */
+    flex-direction: column;
     align-items: center;
     text-align: center;
     background-color:rgba(50, 189, 40, 0.87);
@@ -32,14 +32,14 @@ body{
     font-weight: bold;
     margin-top: 30px;
     margin-bottom: 10px;
-    text-align: center; /* Center text */
+    text-align: center; 
   }
   
   /* Buttons container styles */
   .buttonsContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* Center horizontally */
+    justify-content: center; 
   }
   
   /* Button styles */
